@@ -1,6 +1,7 @@
 package com.zootopia.demo.security;
 
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -9,41 +10,43 @@ import lombok.AllArgsConstructor;
 
 
 @AllArgsConstructor
-public class SecurityUser implements UserDetails{
+public class SecurityUser implements UserDetails {
 
     private final User user;
 
     @Override
-    public String getUsername(){
+    public String getPassword() {
+        return user.getPassword();
+    }
+
+    @Override
+    public String getUsername() {
         return user.getUsername();
     }
 
     @Override
-    public String getPassword(){
-        return user.getPassword();
-    }
-
-    
-    @Override
-    public Collection<? extends GrantedAuthority> getAuthorities(){
-        return user.getAuthorities().stream().map(SecurityAuthority::new).toList();
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+    return user.getAuthorities().stream().map(SecurityAuthority::new).collect(Collectors.toList());
     }
 
     @Override
-    public boolean isAccountNonExpired(){
+    public boolean isAccountNonExpired() {
         return true;
     }
 
     @Override
-    public boolean isAccountNonLocked(){
+    public boolean isAccountNonLocked() {
         return true;
     }
-    
+
     @Override
-    public boolean isEnabled(){
+    public boolean isCredentialsNonExpired() {
         return true;
     }
-    
-    
-    
+
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
 }
+
